[package]
name = "epoch"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-session = "0.1.0"
actix-redis = { git = "https://github.com/actix/actix-redis.git", features = ["web"] }

bytes = "0.4"
env_logger = "0.6"
futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "^1.1.0", features = ["mysql", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"


snowflake = "1.3.0"
toml = "0.5"

# jwt 库
jsonwebtoken = "6"

# 时间戳库
chrono = "0.4"

# emial 库
lettre = "0.9"
lettre_email = "0.9"

# 模板库
handlebars = "2.0.0"
askama = "0.8"

# 命令行库
clap = { version = "2", features = ["yaml"] }

# 错误处理
failure = "0.1"
